# orderbook-smart

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
engine/: CMakeLists.txt
engine/bench/: bench_micro.cpp
engine/include/: book_side.hpp  events.hpp  limit_order_book.hpp  price_level.hpp  top_of_book.hpp
engine/src/: book_side.cpp  limit_order_book.cpp  top_of_book.cpp
engine/tests/: book_side_test.cpp  engine_smoke_test.cpp  lob_match_test.cpp  lob_recent_fills_test.cpp  lob_steps_cancel_test.cpp
ml/: benchmark_performance.py  pyproject.toml  test_advanced_training.py  test_features.py  test_full_pipeline.py  test_realtime_engine.py  test_simple_training.py  test_training.py  test_walk_forward.py
ml/booksmart/backtest/: evaluation.py  simple_bt.py  walk_forward.py
ml/booksmart/engine/: cpp_binding.py  orderbook_engine.py  realtime_features.py
ml/booksmart/features/: __init__.py  dataset.py  labeling.py  microstructure.py  stocks_features.py  volatility.py
ml/booksmart/ingest/: stocks_yf.py
ml/booksmart/models/: __init__.py  fallback_model.py  xgb_model.py
ml/models/: enhanced_model.pkl  training_results.txt
ml/scripts/: train_advanced.py  train_baseline.py
ml/tests/: test_smoke.py
