[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "booksmart-ml"
version = "0.0.1"
description = "Orderbook Smart ML: ingest, features, train, backtest"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "xgboost>=2.0",
  "pyarrow>=14.0",
  "yfinance>=0.2",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
ignore = ["E203"]

